# diplom

./: .env  Cargo.toml
conn_google_calendar/: Cargo.toml
conn_google_calendar/src/: creds.json  lib.rs
google_calendar_conn/: Cargo.toml
google_calendar_conn/src/: main.rs
migrations/2023-03-11-133847_create_tables/: down.sql  up.sql
shared-protocol/: Cargo.toml
signalling-server/: Cargo.toml
src/: auth_handler.rs  database.rs  lib.rs  structs.rs
src/database/: models.rs  schema.rs
wasm_client/src/: websockets.rs
