[package]
name = "aci_diplom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.2"
actix-identity = "0.3.1"
chrono = { version = "0.4.11", features = ["serde"] }
log = "0.4.14"
env_logger = "0.9.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "7"
futures = "0.3.1"
actix-cors = "0.5.4"
actix-multipart = "0.3.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
scraper = "0.16.0"
tokio = { version = "1", features = ["full"] }