[package]
name = "google_calendar_conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-calendar = "0.5.0"
yup-oauth2 = "8.3.0"
chrono = { version = "0.4.11", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
webbrowser = "0.8.9"
google-calendar3 = "*"
serde = "^1.0"
serde_json = "^1.0"